--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,10 @@
     overflow-x: hidden;
 }
 
+hr {
+    margin: 8em 18em;
+}
+
 // Наші кнопки для завантаження
 .wrapper {
     margin: 2em;
@@ -39,12 +43,21 @@ header {
     justify-content: space-between;
     align-items: center;
 
+    & div {
+        width: 50%;
+
+        & .logo {
+            width: 25%;
+        }
+    }
+
     & menu {
         width: 50%;
         display: flex;
         align-items: center;
         justify-content: space-evenly;
         font-family: Montserrat;
+        font-size: calc(var(--index) * 0.6);
         gap: 20px;
 
         & a {
@@ -61,15 +74,27 @@ header {
 
 // main
 .hero {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: url(./img/main-pic.png) no-repeat;
     color: white;
     font-family: Montserrat;
 
+    &__start--img {
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        height: 700px;
+        background: url(./img/main-pic.png) no-repeat center;
+        background-size: cover;
+        z-index: -1;
+    }
+
     &__text {
         margin-top: 3em;
+        font-size: calc(var(--index) * 0.5)
     }
 
     &__title {
@@ -89,7 +114,7 @@ header {
         width: 100%;
         height: 640px;
         background: url(./img/main-pic-phones.png) no-repeat;
-        background-position: 43%;
+        background-position: 47%;
     }
 }
 
@@ -133,6 +158,7 @@ header {
             & h4 {
                 color: #737373;
                 font-weight: 500;
+                font-size: calc(var(--index) * 0.6);
             }
         }
 
@@ -152,6 +178,7 @@ header {
     height: 30em;
     color: white;
     background: url(./img/desktop\ Hero\ Light\ 8.png) no-repeat;
+    background-size: cover;
 
     & h2 {
         font-size: calc(var(--index) * 1.25);
